--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,10 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "map": "cpp",
+        "numeric": "cpp",
+        "xtree": "cpp",
+        "chrono": "cpp"
     }
 }
