Added base class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,10 @@
         "map": "cpp",
         "numeric": "cpp",
         "xtree": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "forward_list": "cpp",
+        "iomanip": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp"
     }
 }
